Updated to include all 2024-25 games and Utah NHL

--- a/team_venues.ipynb
+++ b/team_venues.ipynb
@@ -195,7 +195,7 @@
       "URL #140 complete\n",
       "URL #150 complete\n",
       "Done!\n",
-      "Run time: 133 seconds\n",
+      "Run time: 149 seconds\n",
       "Lats: 154\n",
       "Lons: 154\n",
       "{\n",
@@ -213,8 +213,51 @@
       "    },\n",
       "    \"results\": [\n",
       "        {\n",
+      "            \"address_line1\": \"300 Portage Avenue\",\n",
+      "            \"address_line2\": \"Winnipeg, MB R3C 5S4, Canada\",\n",
+      "            \"city\": \"Winnipeg\",\n",
+      "            \"country\": \"Canada\",\n",
+      "            \"country_code\": \"ca\",\n",
+      "            \"county\": \"Division No. 11\",\n",
+      "            \"datasource\": {\n",
+      "                \"attribution\": \"\\u00a9 OpenAddresses contributors\",\n",
+      "                \"license\": \"BSD-3-Clause License\",\n",
+      "                \"sourcename\": \"openaddresses\"\n",
+      "            },\n",
+      "            \"formatted\": \"300 Portage Avenue, Winnipeg, MB R3C 5S4, Canada\",\n",
+      "            \"housenumber\": \"300\",\n",
+      "            \"lat\": 49.892724,\n",
+      "            \"lon\": -97.143712,\n",
+      "            \"place_id\": \"51bc02d193324958c0595a2db0c744f24840c00203e2034c6f70656e6164647265737365733a616464726573733a63612f6d622f636974795f6f665f77696e6e697065672d6164647265737365732d636974793a61613463613636366334626238666561\",\n",
+      "            \"plus_code\": \"86X4VVV4+3G\",\n",
+      "            \"plus_code_short\": \"V4+3G Winnipeg, Division No. 11, Canada\",\n",
+      "            \"postcode\": \"R3C 5S4\",\n",
+      "            \"rank\": {\n",
+      "                \"confidence\": 1,\n",
+      "                \"confidence_building_level\": 1,\n",
+      "                \"confidence_city_level\": 1,\n",
+      "                \"confidence_street_level\": 1,\n",
+      "                \"match_type\": \"full_match\",\n",
+      "                \"popularity\": 5.926571683049175\n",
+      "            },\n",
+      "            \"result_type\": \"building\",\n",
+      "            \"state\": \"Manitoba\",\n",
+      "            \"state_code\": \"MB\",\n",
+      "            \"street\": \"Portage Avenue\",\n",
+      "            \"suburb\": \"South Portage\",\n",
+      "            \"timezone\": {\n",
+      "                \"abbreviation_DST\": \"CDT\",\n",
+      "                \"abbreviation_STD\": \"CST\",\n",
+      "                \"name\": \"America/Winnipeg\",\n",
+      "                \"offset_DST\": \"-05:00\",\n",
+      "                \"offset_DST_seconds\": -18000,\n",
+      "                \"offset_STD\": \"-06:00\",\n",
+      "                \"offset_STD_seconds\": -21600\n",
+      "            }\n",
+      "        },\n",
+      "        {\n",
       "            \"address_line1\": \"Canada Life Centre\",\n",
-      "            \"address_line2\": \"300 Portage Avenue, Winnipeg, MB R3B 2C1, Canada\",\n",
+      "            \"address_line2\": \"300 Portage Avenue, Winnipeg, MB R3B 2C3, Canada\",\n",
       "            \"bbox\": {\n",
       "                \"lat1\": 49.8919222,\n",
       "                \"lat2\": 49.893419,\n",
@@ -225,25 +268,25 @@
       "            \"city\": \"Winnipeg\",\n",
       "            \"country\": \"Canada\",\n",
       "            \"country_code\": \"ca\",\n",
-      "            \"county\": \"Division No. 11\",\n",
       "            \"datasource\": {\n",
       "                \"attribution\": \"\\u00a9 OpenStreetMap contributors\",\n",
       "                \"license\": \"Open Database License\",\n",
       "                \"sourcename\": \"openstreetmap\",\n",
       "                \"url\": \"https://www.openstreetmap.org/copyright\"\n",
       "            },\n",
-      "            \"district\": \"South Portage\",\n",
-      "            \"formatted\": \"Canada Life Centre, 300 Portage Avenue, Winnipeg, MB R3B 2C1, Canada\",\n",
+      "            \"district\": \"Portage\\u2013Ellice\",\n",
+      "            \"formatted\": \"Canada Life Centre, 300 Portage Avenue, Winnipeg, MB R3B 2C3, Canada\",\n",
       "            \"housenumber\": \"300\",\n",
       "            \"lat\": 49.8925737,\n",
       "            \"lon\": -97.1437218346315,\n",
       "            \"name\": \"Canada Life Centre\",\n",
       "            \"place_id\": \"51a9dd10bd324958c0598662e1da3ff24840f00102f90182e5e20000000000c0020192031243616e616461204c6966652043656e747265\",\n",
       "            \"plus_code\": \"86X4VVV4+2G\",\n",
-      "            \"plus_code_short\": \"V4+2G Winnipeg, Division No. 11, Canada\",\n",
-      "            \"postcode\": \"R3B 2C1\",\n",
+      "            \"plus_code_short\": \"V4+2G Winnipeg, Manitoba, Canada\",\n",
+      "            \"postcode\": \"R3B 2C3\",\n",
       "            \"rank\": {\n",
       "                \"confidence\": 1,\n",
+      "                \"confidence_building_level\": 1,\n",
       "                \"confidence_city_level\": 1,\n",
       "                \"confidence_street_level\": 1,\n",
       "                \"importance\": 0.7317967300625707,\n",
@@ -254,7 +297,6 @@
       "            \"state\": \"Manitoba\",\n",
       "            \"state_code\": \"MB\",\n",
       "            \"street\": \"Portage Avenue\",\n",
-      "            \"suburb\": \"Fort Rouge\\u2013East Fort Garry\",\n",
       "            \"timezone\": {\n",
       "                \"abbreviation_DST\": \"CDT\",\n",
       "                \"abbreviation_STD\": \"CST\",\n",
@@ -267,7 +309,7 @@
       "        },\n",
       "        {\n",
       "            \"address_line1\": \"Moxie's Classic Grill\",\n",
-      "            \"address_line2\": \"300 Portage Avenue, Winnipeg, MB R3B 2C1, Canada\",\n",
+      "            \"address_line2\": \"300 Portage Avenue, Winnipeg, MB R3B 2C3, Canada\",\n",
       "            \"bbox\": {\n",
       "                \"lat1\": 49.8930377,\n",
       "                \"lat2\": 49.8931377,\n",
@@ -278,7 +320,6 @@
       "            \"city\": \"Winnipeg\",\n",
       "            \"country\": \"Canada\",\n",
       "            \"country_code\": \"ca\",\n",
-      "            \"county\": \"Division No. 11\",\n",
       "            \"datasource\": {\n",
       "                \"attribution\": \"\\u00a9 OpenStreetMap contributors\",\n",
       "                \"license\": \"Open Database License\",\n",
@@ -286,17 +327,18 @@
       "                \"url\": \"https://www.openstreetmap.org/copyright\"\n",
       "            },\n",
       "            \"district\": \"South Portage\",\n",
-      "            \"formatted\": \"Moxie's Classic Grill, 300 Portage Avenue, Winnipeg, MB R3B 2C1, Canada\",\n",
+      "            \"formatted\": \"Moxie's Classic Grill, 300 Portage Avenue, Winnipeg, MB R3B 2C3, Canada\",\n",
       "            \"housenumber\": \"300\",\n",
       "            \"lat\": 49.8930877,\n",
       "            \"lon\": -97.1444959,\n",
       "            \"name\": \"Moxie's Classic Grill\",\n",
       "            \"place_id\": \"51fd39bb6b3f4958c059ddfa9fb250f24840f00103f901cc07f34800000000c002019203154d6f786965277320436c6173736963204772696c6c\",\n",
       "            \"plus_code\": \"86X4VVV4+66\",\n",
-      "            \"plus_code_short\": \"V4+66 Winnipeg, Division No. 11, Canada\",\n",
-      "            \"postcode\": \"R3B 2C1\",\n",
+      "            \"plus_code_short\": \"V4+66 Winnipeg, Manitoba, Canada\",\n",
+      "            \"postcode\": \"R3B 2C3\",\n",
       "            \"rank\": {\n",
       "                \"confidence\": 1,\n",
+      "                \"confidence_building_level\": 1,\n",
       "                \"confidence_city_level\": 1,\n",
       "                \"confidence_street_level\": 1,\n",
       "                \"importance\": 0.31001,\n",
@@ -407,8 +449,8 @@
        "      <td>Arizona</td>\n",
        "      <td>United States</td>\n",
        "      <td>401 East Jefferson Street, Phoenix, AZ 85004</td>\n",
-       "      <td>33.446158</td>\n",
-       "      <td>-112.067911</td>\n",
+       "      <td>33.446269</td>\n",
+       "      <td>-112.068551</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -459,8 +501,8 @@
        "      <td>Illinois</td>\n",
        "      <td>United States</td>\n",
        "      <td>1060 West Addison, Chicago, IL 60613-4397</td>\n",
-       "      <td>41.947630</td>\n",
-       "      <td>-87.656376</td>\n",
+       "      <td>41.947568</td>\n",
+       "      <td>-87.656523</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -482,11 +524,11 @@
        "4      Chicago, Illinois     Chicago       Illinois  United States   \n",
        "\n",
        "                                   full_address        lat         lon  \n",
-       "0  401 East Jefferson Street, Phoenix, AZ 85004  33.446158 -112.067911  \n",
+       "0  401 East Jefferson Street, Phoenix, AZ 85004  33.446269 -112.068551  \n",
        "1         755 Battery Avenue, Atlanta, GA 30339  33.890709  -84.468534  \n",
        "2   333 West Camden Street, Baltimore, MD 21201  39.285186  -76.620136  \n",
        "3             4 Jersey Street, Boston, MA 02215  42.345539  -71.098227  \n",
-       "4     1060 West Addison, Chicago, IL 60613-4397  41.947630  -87.656376  "
+       "4     1060 West Addison, Chicago, IL 60613-4397  41.947568  -87.656523  "
       ]
      },
      "execution_count": 5,
