game finder v2, several fixes
Fixes for UTP, timezones (notebooks and database), and completed teams. Completed teams need to be flagged in team_completions.xlsx and are read into game_finder_v2.ipynb. Exports only relevant games to Tableau, which still needs updates.

--- a/team_venues.ipynb
+++ b/team_venues.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -48,6 +48,8 @@
        "      <th>city_state</th>\n",
        "      <th>city</th>\n",
        "      <th>state</th>\n",
+       "      <th>metro_area</th>\n",
+       "      <th>metro_team_num</th>\n",
        "      <th>country</th>\n",
        "      <th>full_address</th>\n",
        "    </tr>\n",
@@ -56,86 +58,96 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>MLB</td>\n",
-       "      <td>Arizona Diamondbacks</td>\n",
-       "      <td>Chase Field</td>\n",
-       "      <td>Phoenix, Arizona</td>\n",
-       "      <td>Phoenix</td>\n",
-       "      <td>Arizona</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>401 East Jefferson Street, Phoenix, AZ 85004</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>MLB</td>\n",
        "      <td>Atlanta Braves</td>\n",
        "      <td>Truist Park</td>\n",
        "      <td>Cumberland, Georgia</td>\n",
        "      <td>Cumberland</td>\n",
        "      <td>Georgia</td>\n",
+       "      <td>Atlanta, Georgia</td>\n",
+       "      <td>mlb_1</td>\n",
        "      <td>United States</td>\n",
        "      <td>755 Battery Avenue, Atlanta, GA 30339</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>MLB</td>\n",
-       "      <td>Baltimore Orioles</td>\n",
-       "      <td>Oriole Park at Camden Yards</td>\n",
-       "      <td>Baltimore, Maryland</td>\n",
-       "      <td>Baltimore</td>\n",
-       "      <td>Maryland</td>\n",
+       "      <th>1</th>\n",
+       "      <td>MLS</td>\n",
+       "      <td>Atlanta United FC</td>\n",
+       "      <td>Mercedes-Benz Stadium</td>\n",
+       "      <td>Atlanta, Georgia</td>\n",
+       "      <td>Atlanta</td>\n",
+       "      <td>Georgia</td>\n",
+       "      <td>Atlanta, Georgia</td>\n",
+       "      <td>mls_1</td>\n",
        "      <td>United States</td>\n",
-       "      <td>333 West Camden Street, Baltimore, MD 21201</td>\n",
+       "      <td>35 Northside Dr NW, Atlanta, GA 30313</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NBA</td>\n",
+       "      <td>Atlanta Hawks</td>\n",
+       "      <td>State Farm Arena</td>\n",
+       "      <td>Atlanta, Georgia</td>\n",
+       "      <td>Atlanta</td>\n",
+       "      <td>Georgia</td>\n",
+       "      <td>Atlanta, Georgia</td>\n",
+       "      <td>nba_1</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>1 State Farm Drive, Atlanta, GA 30303</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>MLB</td>\n",
-       "      <td>Boston Red Sox</td>\n",
-       "      <td>Fenway Park</td>\n",
-       "      <td>Boston, Massachusetts</td>\n",
-       "      <td>Boston</td>\n",
-       "      <td>Massachusetts</td>\n",
+       "      <td>NFL</td>\n",
+       "      <td>Atlanta Falcons</td>\n",
+       "      <td>Mercedes-Benz Stadium</td>\n",
+       "      <td>Atlanta, Georgia</td>\n",
+       "      <td>Atlanta</td>\n",
+       "      <td>Georgia</td>\n",
+       "      <td>Atlanta, Georgia</td>\n",
+       "      <td>nfl_1</td>\n",
        "      <td>United States</td>\n",
-       "      <td>4 Jersey Street, Boston, MA 02215</td>\n",
+       "      <td>35 Northside Dr NW, Atlanta, GA 30313</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>MLB</td>\n",
-       "      <td>Chicago Cubs</td>\n",
-       "      <td>Wrigley Field</td>\n",
-       "      <td>Chicago, Illinois</td>\n",
-       "      <td>Chicago</td>\n",
-       "      <td>Illinois</td>\n",
+       "      <td>MLS</td>\n",
+       "      <td>Austin FC</td>\n",
+       "      <td>Q2 Stadium</td>\n",
+       "      <td>Austin, Texas</td>\n",
+       "      <td>Austin</td>\n",
+       "      <td>Texas</td>\n",
+       "      <td>Austin, Texas</td>\n",
+       "      <td>mls_1</td>\n",
        "      <td>United States</td>\n",
-       "      <td>1060 West Addison, Chicago, IL 60613-4397</td>\n",
+       "      <td>10414 Mc Kalla Pl, Austin, TX 78758</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  league                  team              current_stadium  \\\n",
-       "0    MLB  Arizona Diamondbacks                  Chase Field   \n",
-       "1    MLB        Atlanta Braves                  Truist Park   \n",
-       "2    MLB     Baltimore Orioles  Oriole Park at Camden Yards   \n",
-       "3    MLB        Boston Red Sox                  Fenway Park   \n",
-       "4    MLB          Chicago Cubs                Wrigley Field   \n",
+       "  league               team        current_stadium           city_state  \\\n",
+       "0    MLB     Atlanta Braves            Truist Park  Cumberland, Georgia   \n",
+       "1    MLS  Atlanta United FC  Mercedes-Benz Stadium     Atlanta, Georgia   \n",
+       "2    NBA      Atlanta Hawks       State Farm Arena     Atlanta, Georgia   \n",
+       "3    NFL    Atlanta Falcons  Mercedes-Benz Stadium     Atlanta, Georgia   \n",
+       "4    MLS          Austin FC             Q2 Stadium        Austin, Texas   \n",
        "\n",
-       "              city_state        city          state        country  \\\n",
-       "0       Phoenix, Arizona     Phoenix        Arizona  United States   \n",
-       "1    Cumberland, Georgia  Cumberland        Georgia  United States   \n",
-       "2    Baltimore, Maryland   Baltimore       Maryland  United States   \n",
-       "3  Boston, Massachusetts      Boston  Massachusetts  United States   \n",
-       "4      Chicago, Illinois     Chicago       Illinois  United States   \n",
+       "         city    state        metro_area metro_team_num        country  \\\n",
+       "0  Cumberland  Georgia  Atlanta, Georgia          mlb_1  United States   \n",
+       "1     Atlanta  Georgia  Atlanta, Georgia          mls_1  United States   \n",
+       "2     Atlanta  Georgia  Atlanta, Georgia          nba_1  United States   \n",
+       "3     Atlanta  Georgia  Atlanta, Georgia          nfl_1  United States   \n",
+       "4      Austin    Texas     Austin, Texas          mls_1  United States   \n",
        "\n",
-       "                                   full_address  \n",
-       "0  401 East Jefferson Street, Phoenix, AZ 85004  \n",
-       "1         755 Battery Avenue, Atlanta, GA 30339  \n",
-       "2   333 West Camden Street, Baltimore, MD 21201  \n",
-       "3             4 Jersey Street, Boston, MA 02215  \n",
-       "4     1060 West Addison, Chicago, IL 60613-4397  "
+       "                            full_address  \n",
+       "0  755 Battery Avenue, Atlanta, GA 30339  \n",
+       "1  35 Northside Dr NW, Atlanta, GA 30313  \n",
+       "2  1 State Farm Drive, Atlanta, GA 30303  \n",
+       "3  35 Northside Dr NW, Atlanta, GA 30313  \n",
+       "4    10414 Mc Kalla Pl, Austin, TX 78758  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +207,7 @@
       "URL #140 complete\n",
       "URL #150 complete\n",
       "Done!\n",
-      "Run time: 149 seconds\n",
+      "Run time: 153 seconds\n",
       "Lats: 154\n",
       "Lons: 154\n",
       "{\n",
@@ -402,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -432,6 +444,8 @@
        "      <th>city_state</th>\n",
        "      <th>city</th>\n",
        "      <th>state</th>\n",
+       "      <th>metro_area</th>\n",
+       "      <th>metro_team_num</th>\n",
        "      <th>country</th>\n",
        "      <th>full_address</th>\n",
        "      <th>lat</th>\n",
@@ -442,96 +456,106 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>MLB</td>\n",
-       "      <td>Arizona Diamondbacks</td>\n",
-       "      <td>Chase Field</td>\n",
-       "      <td>Phoenix, Arizona</td>\n",
-       "      <td>Phoenix</td>\n",
-       "      <td>Arizona</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>401 East Jefferson Street, Phoenix, AZ 85004</td>\n",
-       "      <td>33.446269</td>\n",
-       "      <td>-112.068551</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>MLB</td>\n",
        "      <td>Atlanta Braves</td>\n",
        "      <td>Truist Park</td>\n",
        "      <td>Cumberland, Georgia</td>\n",
        "      <td>Cumberland</td>\n",
        "      <td>Georgia</td>\n",
+       "      <td>Atlanta, Georgia</td>\n",
+       "      <td>mlb_1</td>\n",
        "      <td>United States</td>\n",
        "      <td>755 Battery Avenue, Atlanta, GA 30339</td>\n",
        "      <td>33.890709</td>\n",
        "      <td>-84.468534</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>MLB</td>\n",
-       "      <td>Baltimore Orioles</td>\n",
-       "      <td>Oriole Park at Camden Yards</td>\n",
-       "      <td>Baltimore, Maryland</td>\n",
-       "      <td>Baltimore</td>\n",
-       "      <td>Maryland</td>\n",
+       "      <th>1</th>\n",
+       "      <td>MLS</td>\n",
+       "      <td>Atlanta United FC</td>\n",
+       "      <td>Mercedes-Benz Stadium</td>\n",
+       "      <td>Atlanta, Georgia</td>\n",
+       "      <td>Atlanta</td>\n",
+       "      <td>Georgia</td>\n",
+       "      <td>Atlanta, Georgia</td>\n",
+       "      <td>mls_1</td>\n",
        "      <td>United States</td>\n",
-       "      <td>333 West Camden Street, Baltimore, MD 21201</td>\n",
-       "      <td>39.285186</td>\n",
-       "      <td>-76.620136</td>\n",
+       "      <td>35 Northside Dr NW, Atlanta, GA 30313</td>\n",
+       "      <td>33.755447</td>\n",
+       "      <td>-84.402094</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NBA</td>\n",
+       "      <td>Atlanta Hawks</td>\n",
+       "      <td>State Farm Arena</td>\n",
+       "      <td>Atlanta, Georgia</td>\n",
+       "      <td>Atlanta</td>\n",
+       "      <td>Georgia</td>\n",
+       "      <td>Atlanta, Georgia</td>\n",
+       "      <td>nba_1</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>1 State Farm Drive, Atlanta, GA 30303</td>\n",
+       "      <td>33.757370</td>\n",
+       "      <td>-84.396385</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>MLB</td>\n",
-       "      <td>Boston Red Sox</td>\n",
-       "      <td>Fenway Park</td>\n",
-       "      <td>Boston, Massachusetts</td>\n",
-       "      <td>Boston</td>\n",
-       "      <td>Massachusetts</td>\n",
+       "      <td>NFL</td>\n",
+       "      <td>Atlanta Falcons</td>\n",
+       "      <td>Mercedes-Benz Stadium</td>\n",
+       "      <td>Atlanta, Georgia</td>\n",
+       "      <td>Atlanta</td>\n",
+       "      <td>Georgia</td>\n",
+       "      <td>Atlanta, Georgia</td>\n",
+       "      <td>nfl_1</td>\n",
        "      <td>United States</td>\n",
-       "      <td>4 Jersey Street, Boston, MA 02215</td>\n",
-       "      <td>42.345539</td>\n",
-       "      <td>-71.098227</td>\n",
+       "      <td>35 Northside Dr NW, Atlanta, GA 30313</td>\n",
+       "      <td>33.755447</td>\n",
+       "      <td>-84.402094</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>MLB</td>\n",
-       "      <td>Chicago Cubs</td>\n",
-       "      <td>Wrigley Field</td>\n",
-       "      <td>Chicago, Illinois</td>\n",
-       "      <td>Chicago</td>\n",
-       "      <td>Illinois</td>\n",
+       "      <td>MLS</td>\n",
+       "      <td>Austin FC</td>\n",
+       "      <td>Q2 Stadium</td>\n",
+       "      <td>Austin, Texas</td>\n",
+       "      <td>Austin</td>\n",
+       "      <td>Texas</td>\n",
+       "      <td>Austin, Texas</td>\n",
+       "      <td>mls_1</td>\n",
        "      <td>United States</td>\n",
-       "      <td>1060 West Addison, Chicago, IL 60613-4397</td>\n",
-       "      <td>41.947568</td>\n",
-       "      <td>-87.656523</td>\n",
+       "      <td>10414 Mc Kalla Pl, Austin, TX 78758</td>\n",
+       "      <td>30.386286</td>\n",
+       "      <td>-97.718773</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  league                  team              current_stadium  \\\n",
-       "0    MLB  Arizona Diamondbacks                  Chase Field   \n",
-       "1    MLB        Atlanta Braves                  Truist Park   \n",
-       "2    MLB     Baltimore Orioles  Oriole Park at Camden Yards   \n",
-       "3    MLB        Boston Red Sox                  Fenway Park   \n",
-       "4    MLB          Chicago Cubs                Wrigley Field   \n",
+       "  league               team        current_stadium           city_state  \\\n",
+       "0    MLB     Atlanta Braves            Truist Park  Cumberland, Georgia   \n",
+       "1    MLS  Atlanta United FC  Mercedes-Benz Stadium     Atlanta, Georgia   \n",
+       "2    NBA      Atlanta Hawks       State Farm Arena     Atlanta, Georgia   \n",
+       "3    NFL    Atlanta Falcons  Mercedes-Benz Stadium     Atlanta, Georgia   \n",
+       "4    MLS          Austin FC             Q2 Stadium        Austin, Texas   \n",
        "\n",
-       "              city_state        city          state        country  \\\n",
-       "0       Phoenix, Arizona     Phoenix        Arizona  United States   \n",
-       "1    Cumberland, Georgia  Cumberland        Georgia  United States   \n",
-       "2    Baltimore, Maryland   Baltimore       Maryland  United States   \n",
-       "3  Boston, Massachusetts      Boston  Massachusetts  United States   \n",
-       "4      Chicago, Illinois     Chicago       Illinois  United States   \n",
+       "         city    state        metro_area metro_team_num        country  \\\n",
+       "0  Cumberland  Georgia  Atlanta, Georgia          mlb_1  United States   \n",
+       "1     Atlanta  Georgia  Atlanta, Georgia          mls_1  United States   \n",
+       "2     Atlanta  Georgia  Atlanta, Georgia          nba_1  United States   \n",
+       "3     Atlanta  Georgia  Atlanta, Georgia          nfl_1  United States   \n",
+       "4      Austin    Texas     Austin, Texas          mls_1  United States   \n",
        "\n",
-       "                                   full_address        lat         lon  \n",
-       "0  401 East Jefferson Street, Phoenix, AZ 85004  33.446269 -112.068551  \n",
-       "1         755 Battery Avenue, Atlanta, GA 30339  33.890709  -84.468534  \n",
-       "2   333 West Camden Street, Baltimore, MD 21201  39.285186  -76.620136  \n",
-       "3             4 Jersey Street, Boston, MA 02215  42.345539  -71.098227  \n",
-       "4     1060 West Addison, Chicago, IL 60613-4397  41.947568  -87.656523  "
+       "                            full_address        lat        lon  \n",
+       "0  755 Battery Avenue, Atlanta, GA 30339  33.890709 -84.468534  \n",
+       "1  35 Northside Dr NW, Atlanta, GA 30313  33.755447 -84.402094  \n",
+       "2  1 State Farm Drive, Atlanta, GA 30303  33.757370 -84.396385  \n",
+       "3  35 Northside Dr NW, Atlanta, GA 30313  33.755447 -84.402094  \n",
+       "4    10414 Mc Kalla Pl, Austin, TX 78758  30.386286 -97.718773  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +577,7 @@
        "154"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
