ReadMe and Clean-Up
Wrote a real ReadMe and cleaned up some minor things in several files that were for personal use.

--- a/team_venues.ipynb
+++ b/team_venues.ipynb
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +589,7 @@
     "\n",
     "engine = create_engine(f'postgresql+psycopg2://postgres:{postgresql_pw}@localhost:5432/api_sports')\n",
     "\n",
-    "# import teams_df and games_df to new tables in api-sports db\n",
+    "# import team_venues to new table in api-sports db\n",
     "team_venues.to_sql('team_venues', con=engine, if_exists='replace', index=False)"
    ]
   }
