Created .py files to update pipeline

--- a/game_finder_v2.ipynb
+++ b/game_finder_v2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
     "\n",
     "# create postgresql connection\n",
     "from sqlalchemy import create_engine\n",
-    "from creds import postgresql_pw\n",
+    "from etl.creds import postgresql_pw\n",
     "\n",
     "engine = create_engine(f'postgresql+psycopg2://postgres:{postgresql_pw}@localhost:5432/api_sports')"
    ]
