Created game_finder_v3, edited ETL files

--- a/game_finder_v2.ipynb
+++ b/game_finder_v2.ipynb
@@ -2654,6 +2654,21 @@
     "# exporting results to use in Tableau\n",
     "games_counts_df.to_csv('tableau/games_counts_data.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TODO: Add the multiple lengths of date range, then use Tableau parameter to switch between the fields that have the counts for each length?\n",
+    "\n",
+    "Would need separate columns for the earliest_start and latest_end date of each game-length combo? Does this explode df length?\n",
+    "\n",
+    "If the goal is to have 5 days as max range and then look for shorter, is there a more dynamic way of finding the number of days within the date range that actually contain the games? Like if there's 3 in 5, but they're actually 3 days in a row, then it's a true 3-day range. But would that be thrown off by a team having more than 1 game in the range?\n",
+    "\n",
+    "Is there a way to just add the number of \"dead days\" (days without game) in a date range? Because that might matter most.\n",
+    "\n",
+    "Could just repeat the current process for other lengths of date ranges, but might encounter memory limits if joining multiple times on large dfs (current length is ~2M rows)"
+   ]
   }
  ],
  "metadata": {
