--- a/leagues_api_data_collection_history.ipynb
+++ b/leagues_api_data_collection_history.ipynb
@@ -25,8 +25,8 @@
    "outputs": [],
    "source": [
     "# libraries and dependencies\n",
-    "from creds import api_key, postgresql_pw\n",
-    "from helper_functions import apiSports\n",
+    "from etl.creds import api_key, postgresql_pw\n",
+    "from etl.helper_functions import apiSports\n",
     "from pprint import pprint\n",
     "from sqlalchemy import create_engine, text\n",
     "import pandas as pd"
@@ -61,10 +61,10 @@
       " 'response': {'account': {'email': 'hunterhollismobile@gmail.com',\n",
       "                          'firstname': 'Hunter',\n",
       "                          'lastname': 'Hollis'},\n",
-      "              'requests': {'current': 0, 'limit_day': 100},\n",
+      "              'requests': {'current': 0, 'limit_day': 7500},\n",
       "              'subscription': {'active': True,\n",
-      "                               'end': '2025-05-16T00:00:00+00:00',\n",
-      "                               'plan': 'Free'}},\n",
+      "                               'end': '2025-04-03T15:34:47+00:00',\n",
+      "                               'plan': 'Pro'}},\n",
       " 'results': 0}\n"
      ]
     }
@@ -101,24 +101,24 @@
      "output_type": "stream",
      "text": [
       "MLB:\n",
-      "{'current': 0, 'limit_day': 100}\n",
-      "{'active': True, 'end': '2025-05-16T00:00:00+00:00', 'plan': 'Free'}\n",
+      "{'current': 0, 'limit_day': 7500}\n",
+      "{'active': True, 'end': '2025-04-03T15:34:47+00:00', 'plan': 'Pro'}\n",
       "----------------------------------------------------------------------\n",
       "MLS:\n",
-      "{'current': 0, 'limit_day': 100}\n",
-      "{'active': True, 'end': '2025-05-16T00:00:00+00:00', 'plan': 'Free'}\n",
+      "{'current': 0, 'limit_day': 7500}\n",
+      "{'active': True, 'end': '2025-04-03T15:34:47+00:00', 'plan': 'Pro'}\n",
       "----------------------------------------------------------------------\n",
       "NBA:\n",
-      "{'current': 0, 'limit_day': 100}\n",
-      "{'active': True, 'end': '2025-05-16T00:00:00+00:00', 'plan': 'Free'}\n",
+      "{'current': 0, 'limit_day': 7500}\n",
+      "{'active': True, 'end': '2025-04-03T15:34:47+00:00', 'plan': 'Pro'}\n",
       "----------------------------------------------------------------------\n",
       "NFL:\n",
-      "{'current': 0, 'limit_day': 100}\n",
-      "{'active': True, 'end': '2025-05-16T00:00:00+00:00', 'plan': 'Free'}\n",
+      "{'current': 0, 'limit_day': 7500}\n",
+      "{'active': True, 'end': '2025-04-03T15:34:47+00:00', 'plan': 'Pro'}\n",
       "----------------------------------------------------------------------\n",
       "NHL:\n",
-      "{'current': 0, 'limit_day': 100}\n",
-      "{'active': True, 'end': '2025-05-16T00:00:00+00:00', 'plan': 'Free'}\n",
+      "{'current': 0, 'limit_day': 7500}\n",
+      "{'active': True, 'end': '2025-04-03T15:34:47+00:00', 'plan': 'Pro'}\n",
       "----------------------------------------------------------------------\n"
      ]
     }
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,6 +268,31 @@
     "                   'update': False,\n",
     "                   'rebuild_tables': False}}\n",
     "\n",
+    "def refresh_flags(update_all, rebuild_all, leagues_dict=leagues):\n",
+    "    \"\"\"\n",
+    "    Function to set all leagues in dictionary to refresh and/or rebuild tables\n",
+    "    Takes 3 parameters:\n",
+    "        1) update_all: boolean | whether to update all leagues\n",
+    "        2) rebuild_all: boolean | whether to rebuild all league tables\n",
+    "        3) leagues_dict: dictionary | previously defined info about each league\n",
+    "    \"\"\"\n",
+    "    if update_all:\n",
+    "        user_confirm_update = input(\"Please confirm you would like to update all leagues' histories by typing 'CONFIRM': \").upper()\n",
+    "        if user_confirm_update == 'CONFIRM':\n",
+    "            for name, info in leagues_dict.items():\n",
+    "                info['update']=True\n",
+    "            print('When `update_history()` function is run, all leagues will be updated.')\n",
+    "    if rebuild_all:\n",
+    "        user_confirm_rebuild = input(\"Please confirm you would like to DELETE ALL CURRENT TABLES with leagues' histories by typing 'CONFIRM': \").upper()\n",
+    "        if user_confirm_rebuild == 'CONFIRM':\n",
+    "            for name, info in leagues_dict.items():\n",
+    "                info['rebuild_tables']=True\n",
+    "            print('When `update_history()` function is run, all existing tables with league history will be dropped and rebuilt. Only do this if starting from scratch.')\n",
+    "    if (not update_all) & (not rebuild_all):\n",
+    "        print(\"Leagues dictionary will not be changed further.\")\n",
+    "    print(f\"{'-'*70}\")\n",
+    "    return leagues_dict\n",
+    "\n",
     "def update_history(start_season, end_season, endpoint, leagues=leagues):\n",
     "    \"\"\"\n",
     "    Function to update teams tables for all leagues and seasons\n",
@@ -292,7 +317,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "When `update_history()` function is run, all leagues will be updated.\n",
+      "When `update_history()` function is run, all existing tables with league history will be dropped and rebuilt. Only do this if starting from scratch.\n",
+      "----------------------------------------------------------------------\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'mlb': {'object': <etl.helper_functions.apiSports at 0x1b84814c1d0>,\n",
+       "  'id': '1',\n",
+       "  'tables': {'teams': 'mlb_teams_history', 'games': 'mlb_games_history'},\n",
+       "  'update': True,\n",
+       "  'rebuild_tables': True},\n",
+       " 'mls': {'object': <etl.helper_functions.apiSports at 0x1b846922f00>,\n",
+       "  'id': '253',\n",
+       "  'tables': {'teams': 'mls_teams_history, mls_venues_history',\n",
+       "   'games': 'mls_games_history'},\n",
+       "  'update': True,\n",
+       "  'rebuild_tables': True},\n",
+       " 'nba': {'object': <etl.helper_functions.apiSports at 0x1b847f6c560>,\n",
+       "  'id': '12',\n",
+       "  'tables': {'teams': 'nba_teams_history', 'games': 'nba_games_history'},\n",
+       "  'update': True,\n",
+       "  'rebuild_tables': True},\n",
+       " 'nfl': {'object': <etl.helper_functions.apiSports at 0x1b8481cf8c0>,\n",
+       "  'id': '1',\n",
+       "  'tables': {'teams': 'nfl_teams_history', 'games': 'nfl_games_history'},\n",
+       "  'update': True,\n",
+       "  'rebuild_tables': True},\n",
+       " 'nhl': {'object': <etl.helper_functions.apiSports at 0x1b8466095b0>,\n",
+       "  'id': '57',\n",
+       "  'tables': {'teams': 'nhl_teams_history', 'games': 'nhl_games_history'},\n",
+       "  'update': True,\n",
+       "  'rebuild_tables': True}}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# set arguments to True for new build or full re-build\n",
+    "leagues = refresh_flags(update_all=True, rebuild_all=True)\n",
+    "leagues"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -312,6 +393,10 @@
       "Returned 34 teams.\n",
       "Cleaned and uploaded 34 teams to mlb_teams_history.\n",
       "\n",
+      "Retrieving teams data for 2024 MLB season.\n",
+      "Returned 32 teams.\n",
+      "Cleaned and uploaded 32 teams to mlb_teams_history.\n",
+      "\n",
       "----------------------------------------------------------------------\n",
       "Dropping table(s) mls_teams_history, mls_venues_history...\n",
       "Retrieving teams data for 2021 MLS season.\n",
@@ -323,6 +408,10 @@
       "Cleaned and uploaded 28 teams to mls_teams_history,  28 venues to mls_venues_history.\n",
       "\n",
       "Retrieving teams data for 2023 MLS season.\n",
+      "Returned 29 teams.\n",
+      "Cleaned and uploaded 29 teams to mls_teams_history,  29 venues to mls_venues_history.\n",
+      "\n",
+      "Retrieving teams data for 2024 MLS season.\n",
       "Returned 29 teams.\n",
       "Cleaned and uploaded 29 teams to mls_teams_history,  29 venues to mls_venues_history.\n",
       "\n",
@@ -340,6 +429,10 @@
       "Returned 32 teams.\n",
       "Cleaned and uploaded 32 teams to nba_teams_history.\n",
       "\n",
+      "Retrieving teams data for 2024-2025 NBA season.\n",
+      "Returned 34 teams.\n",
+      "Cleaned and uploaded 34 teams to nba_teams_history.\n",
+      "\n",
       "----------------------------------------------------------------------\n",
       "Dropping table(s) nfl_teams_history...\n",
       "Retrieving teams data for 2021 NFL season.\n",
@@ -351,6 +444,10 @@
       "Cleaned and uploaded 34 teams to nfl_teams_history.\n",
       "\n",
       "Retrieving teams data for 2023 NFL season.\n",
+      "Returned 34 teams.\n",
+      "Cleaned and uploaded 34 teams to nfl_teams_history.\n",
+      "\n",
+      "Retrieving teams data for 2024 NFL season.\n",
       "Returned 34 teams.\n",
       "Cleaned and uploaded 34 teams to nfl_teams_history.\n",
       "\n",
@@ -368,6 +465,10 @@
       "Returned 36 teams.\n",
       "Cleaned and uploaded 36 teams to nhl_teams_history.\n",
       "\n",
+      "Retrieving teams data for 2024 NHL season.\n",
+      "Returned 32 teams.\n",
+      "Cleaned and uploaded 32 teams to nhl_teams_history.\n",
+      "\n",
       "----------------------------------------------------------------------\n"
      ]
     }
@@ -379,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -399,6 +500,10 @@
       "Returned 2940 games.\n",
       "Cleaned and uploaded 2940 games to mlb_games_history.\n",
       "\n",
+      "Retrieving games data for 2024 MLB season.\n",
+      "Returned 2946 games.\n",
+      "Cleaned and uploaded 2946 games to mlb_games_history.\n",
+      "\n",
       "----------------------------------------------------------------------\n",
       "Dropping table(s) mls_games_history...\n",
       "Retrieving games data for 2021 MLS season.\n",
@@ -410,6 +515,10 @@
       "Cleaned and uploaded 489 games to mls_games_history.\n",
       "\n",
       "Retrieving games data for 2023 MLS season.\n",
+      "Returned 526 games.\n",
+      "Cleaned and uploaded 526 games to mls_games_history.\n",
+      "\n",
+      "Retrieving games data for 2024 MLS season.\n",
       "Returned 526 games.\n",
       "Cleaned and uploaded 526 games to mls_games_history.\n",
       "\n",
@@ -427,6 +536,10 @@
       "Returned 1377 games.\n",
       "Cleaned and uploaded 1377 games to nba_games_history.\n",
       "\n",
+      "Retrieving games data for 2024-2025 NBA season.\n",
+      "Returned 1297 games.\n",
+      "Cleaned and uploaded 1297 games to nba_games_history.\n",
+      "\n",
       "----------------------------------------------------------------------\n",
       "Dropping table(s) nfl_games_history...\n",
       "Retrieving games data for 2021 NFL season.\n",
@@ -438,6 +551,10 @@
       "Cleaned and uploaded 335 games to nfl_games_history.\n",
       "\n",
       "Retrieving games data for 2023 NFL season.\n",
+      "Returned 335 games.\n",
+      "Cleaned and uploaded 335 games to nfl_games_history.\n",
+      "\n",
+      "Retrieving games data for 2024 NFL season.\n",
       "Returned 335 games.\n",
       "Cleaned and uploaded 335 games to nfl_games_history.\n",
       "\n",
@@ -454,6 +571,10 @@
       "Retrieving games data for 2023 NHL season.\n",
       "Returned 1514 games.\n",
       "Cleaned and uploaded 1514 games to nhl_games_history.\n",
+      "\n",
+      "Retrieving games data for 2024 NHL season.\n",
+      "Returned 1417 games.\n",
+      "Cleaned and uploaded 1417 games to nhl_games_history.\n",
       "\n",
       "----------------------------------------------------------------------\n"
      ]
